# sql-investigation-env

./: .dockerignore  .gitignore  .rebuild  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_FIX_EXPLANATION.md  LIVE_SERVER_REFERENCE.md  README.md  SMOOTH_CURVE_IMPLEMENTATION.md  SQL Investigation Environment.code-workspace  SYSTEM_SUMMARY.md  VALIDATOR_FIX_SUMMARY.md  __init__.py  app.py  comprehensive_qa.py  db.py  debug_partial.py  debug_task2.py  environment.py  final_qa.py  full_system_test.py  grader.py  improved_qa.py  inference.py  models.py  openenv.yaml  pyproject.toml  qa_report.py  quick_test_local.py  requirements.txt  tasks.py  test_fresh_dbs.py  validate_smooth_curve.py
server/: __init__.py  app.py  environment.py
server/static/: index.html
