[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-investigation-env"
version = "0.1.0"
description = "An RL environment where AI agents debug and fix SQL queries"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
